# pait-zh-doc

./: .gitmodules  .pre-commit-config.yaml  404.html  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap.xml  versions.json
1.0/: 404.html  index.html
1_1_introduction/: index.html
1_2_how_to_use_field/: index.html
1_3_how_to_use_type/: index.html
1_4_depend/: index.html
1_5_exception/: index.html
2_how_to_use_pait/: index.html
2_pait_multiplexing/: index.html
3_1_openapi/: index.html
3_2_openapi_route/: index.html
3_3_security/: index.html
3_api_doc/: index.html
3_openapi/: index.html
4_unit_test_helper/: index.html
5_1_introduction/: index.html
5_2_param_check_plugin/: index.html
5_3_json_response_plugin/: index.html
5_4_mock_json_response_check_plugin/: index.html
5_5_cache_response/: index.html
5_5_how_tp_customize_the_plugin/: index.html
5_x_how_tp_customize_the_plugin/: index.html
6_config/: index.html
6_other/: index.html
7_gRPC_gateway/: index.html
7_other/: index.html
8_other/: index.html
docs/: 1_1_introduction.md  1_2_how_to_use_field.md  1_3_how_to_use_type.md  1_4_depend.md  1_5_exception.md  2_how_to_use_pait.md  2_pait_multiplexing.md  3_1_openapi.md  3_2_openapi_route.md  3_3_security.md  3_api_doc.md  4_unit_test_helper.md  5_1_introduction.md  5_2_param_check_plugin.md  5_3_json_response_plugin.md  5_4_mock_json_response_check_plugin.md  5_5_cache_response.md  5_5_how_tp_customize_the_plugin.md  5_x_how_tp_customize_the_plugin.md  6_config.md  7_gRPC_gateway.md  (+3 more)
(+199 files in other folders)
