[tool.poetry]
name = "pait-zh-doc"
version = "0.1.0"
description = ""
authors = ["so1n <so1n897046026@gmail.com>"]
readme = "README.md"
packages = [{include = "pait_zh_doc"}]

[tool.poetry.dependencies]
python = "^3.7"
pait = {version = "1.0.0a3", extras = ["grpc"]}

[tool.poetry.group.framework.dependencies]
werkzeug = "1.0.1"
Flask = "1.1.2"
jinja2 = "^2.0.0"
sanic = "21.3.4"
sanic-testing = "0.3.0"
tornado = "6.1"
uvicorn = "0.13.4"
starlette = "0.14.1"
markupsafe = "2.0.1"
itsdangerous = "1.1.0"
protobuf = "3.20.1"
python-multipart = "^0.0.6"
[tool.autoflake]
in-place = true
remove-all-unused-imports = true
remove-unused-variables = true
ignore-init-module-imports = true

[tool.black]
line-length = 120
target-version = ['py37']

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
python_executable = ".venv/bin/python"
exclude = [
    "^example/example_grpc/python_example_proto_code/example_proto",
    "^pait/http"
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
